[metadata]
name = recho
author = Levi Noecker
author-email = levi.noecker@gmail.com
summary = Post the Reddit users's latest comment(s) to a specific Slack channel
description-file = README.rst
home-page = https://github.com/DankCity/recho
license = MIT
keywords = reddit slack bot slackbot recho
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Communications :: Chat
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[files]
packages =
    recho

[entry_points]
console_scripts =
    recho = recho.cli:main

[tool:pytest]
testpaths = tests

[flake8]
count = True
statistics = True
max-complexity = 10
max-line-length = 100
output-file = {envdir}/flake8.txt
exclude =
    .git
    __pycache__
    docs/source/conf.py
    old
    build
    dist

[bdist_wheel]
universal=1
